--- a/generator/pom.xml
+++ b/generator/pom.xml
@@ -27,6 +27,11 @@
       <artifactId>2aa4.mesh.mesh</artifactId>
       <version>1.0</version>
     </dependency>
+    <dependency>
+      <groupId>commons-cli</groupId>
+      <artifactId>commons-cli</artifactId>
+      <version>1.5.0</version>
+    </dependency>
   </dependencies>
 
   <build>
