--- a/mesh/pom.xml
+++ b/mesh/pom.xml
@@ -19,5 +19,10 @@
             <artifactId>2aa4.mesh.io</artifactId>
             <version>1.0</version>
         </dependency>
+        <dependency>
+            <groupId>commons-cli</groupId>
+            <artifactId>commons-cli</artifactId>
+            <version>1.5.0</version>
+        </dependency>
     </dependencies>
 </project>
