--- a/visualizer/pom.xml
+++ b/visualizer/pom.xml
@@ -28,6 +28,11 @@
 		  <version>1.16</version>
 	  </dependency>
 	  <dependency>
+		  <groupId>commons-cli</groupId>
+		  <artifactId>commons-cli</artifactId>
+		  <version>1.5.0</version>
+	  </dependency>
+	  <dependency>
 		  <groupId>io.github.ace-design</groupId>
 		  <artifactId>2aa4.mesh.mesh</artifactId>
 		  <version>1.0</version>
