--- a/generator/pom.xml
+++ b/generator/pom.xml
@@ -32,6 +32,11 @@
       <artifactId>commons-cli</artifactId>
       <version>1.5.0</version>
     </dependency>
+    <dependency>
+      <groupId>org.locationtech.jts</groupId>
+      <artifactId>jts-core</artifactId>
+      <version>1.16.1</version>
+    </dependency>
   </dependencies>
 
   <build>
