Add island module

--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,7 @@
         <module>io</module>
         <module>visualizer</module>
 		<module>mesh</module>
+		<module>island</module>
 	</modules>
 
     <properties>
